<resources>
    <string name="app_name">Ed. Física</string>
    <string-array name="GrupoClase">
        <item>Seleccionar</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>
    <string-array name="SeleccionarSexoAlumno">
        <item>Seleccionar</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="GrupoClaseBusqueda">
        <item>Todos</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>
    <string-array name="SeleccionarSexoAlumnoBusqueda">
        <item>Todos</item>
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="SeleccionarTrimestre">
        <item>1ºTrimestre</item>
        <item>3ºTrimestre</item>
    </string-array>
    <string name="db">my.db</string>
    <string name="btnModificarAlumno">Modificar</string>
    <string name="btnConsultarAlumno">Consultar alumno</string>
    <string name="btnCrearAlumno">Crear alumno</string>
    <string name="btnIntroducirDatos">Introducir datos</string>
    <string name="btnVerTodosAlumnos">Modificar alumnos</string>
    <string name="btnGuardarAlumnoBBDD">Guardar Alumno</string>
    <string name="txtCreacionAlumno">Creacion Alumno</string>
    <string name="txtConfirmacionAlumno">Confirmacion Alumno</string>
    <string name="txtNockName">Nickname</string>
    <string name="txtGrupo">Grupo</string>
    <string name="txtSexo">Sexo</string>
    <string name="txtEdad">Edad</string>
    <string name="txtFlexibilidad">Flexibilidad</string>
    <string name="txtFuerza">Fuerza</string>
    <string name="txtVelocidad">Velocidad</string>
    <string name="txtResistencia">Resistencia</string>
    <string name="PrimerTrimestre">1ºTrimestre</string>
    <string name="TercerTrimsetre">3ºTrimestre</string>
    <string name="sumaTrimsetre">Total</string>
    <string name="Asignatura">Asignatura</string>
    <string name="buscar">Buscar</string>
</resources>